
	* bin/cygport.in (cygautoreconf, __pkg_diff):
	* bin/doexe:
	* bin/prep_libtool_modules.sh:
	* lib/berkdb.cygclass (berkdb_autoreconf):
	* lib/gnome2.cygclass (gnome2_autoreconf):
	* lib/kde3.cygclass (kde3_autoreconf):
	Make compatible with libtool-2.2.

	* lib/R.cygclass: Define HOMEPAGE,SRC_URI,etc. only for CRAN packages.

	* lib/gtk2-perl.cygclass (gtk2_perl_compile):
	Fix linking to other modules for perl-5.10.

	* bin/cygport.in (cygautoreconf): Fixed typo in NO_LIBTOOLIZE.

	* CYGWIN-PATCHES/README:
	* bin/cygport.in (__src_fetch):
	* lib/Makefile.am:
	* lib/hg.cygclass: New cygclass for Mercurial checkouts.

	* lib/perl.cygclass (perl_postinst): Just delete perllocal.pod stub.

	* lib/php.cygclass (php_postinst): Cleanup /tmp/pear.

	* lib/R.cygclass: Updated HOMEPAGE.

	* lib/gtk2-perl.cygclass (gtk2_perl_compile): Fix Cairo linkage.

	* lib/gst-plugins0.10.cygclass: Updated for gst-plugins-bad 0.10.6.

	* bin/cygport.in (__src_prep) [UNSTABLE_API]:
	Run src_patch_hook, if defined, after SRC_PATCH patching.

	* bin/cygport.in (__prepetc):
	Allow either postinstall.sh or PN.postinstall (ditto with preremove).
	Allow individual NAME.{postinstall,preremove} for multiple-binary pkgs.

	* CYGWIN-PATCHES/README:
	* configure.ac:
	Post-release version bump.

*** 0.3.8 ***

	* bin/cygport.in (__prepman): Fix manpage symlinks.

	* lib/ocaml.cygclass (ocaml_install): Don't define DOCDIR.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/lua.cygclass: New cygclass for Lua modules.

	* lib/cvs.cygclass: Handle '/' in CVS_MODULE.

	* lib/R.cygclass: Define R_INCLUDEDIR.

	* lib/docbook.cygclass: Some fixes for docbook-xml-simple.

	* lib/R.cygclass:
	* lib/distutils.cygclass:
	* lib/perl.cygclass:
	Auto-define ORIG_PN only if PN indicates we are building a module.

	* lib/apache.cygclass: Define APREQ_CONFIG, APREQ_CFLAGS, APREQ_LIBS.

	* bin/cygport.in (__prepstrip):
	Don't strip OCaml bytecode executables, based on file magic test.
