@@ -19,7 +19,7 @@
 # You should have received a copy of the GNU General Public License
 # along with cygport.  If not, see <http://www.gnu.org/licenses/>.
 #
-# $Id: cygport.in,v 1.103 2008-04-16 00:16:56 yselkowitz Exp $
+# $Id: cygport.in,v 1.104 2008-04-16 00:19:16 yselkowitz Exp $
 #
 ################################################################################
 
@@ -563,6 +563,10 @@ unpack() {
 			*.asc|*.md5|*.sig|*.sign)  continue ;;
 			*.tar.bz2|*.tbz2|*.tbz) unpack_cmd="tar jxf" ;;
 			*.tar.gz|*.tgz|*.tar.Z) unpack_cmd="tar zxf" ;;
+			*.tar.lzma)
+				check_prog_req lzma
+				unpack_cmd="tar --lzma xf"
+				;;
 			*.tar)  unpack_cmd="tar xf"  ;;
 			*.bz2)
 				unpack_cmd="bunzip2 -c";
